--- a/ch3/makefile
+++ b/ch3/makefile
@@ -1,7 +1,7 @@
 .PHONY:
 
 hello_fp:
-	gcc hello_fp.c -o hello_fp
+	gcc -S hello_fp.c
 
 hello_int:
-	gcc hello_int.c -o hello_int
+	gcc -S hello_int.c
